--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ img {
 .container {
   width: 100%;
   padding: 0 10%;
+  margin-bottom: 20px;
 }
 .flex {
   display: flex;
@@ -162,14 +163,139 @@ img {
 .btn2 {
   background-color: var(--secondary-color);
 }
-/* ============navigation============= */
+/* ============gamer-section============= */
+.gamer-section {
+  background: linear-gradient(
+    90deg,
+    rgba(255, 66, 165, 0.03) 0%,
+    rgba(255, 66, 165, 0.03) 100%
+  );
+}
+.section-img {
+  width: 60%;
+}
+.section-description {
+  width: 50%;
+  text-align: end;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: end;
+  gap: 15px;
+}
+.purpose {
+  color: #534c64;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 25px;
+}
+
+/* ==========Online Game Section========== */
+.section-online-game {
+  padding-top: 40px;
+}
+.online-game-description {
+  text-align: center;
+  margin-bottom: 2rem;
+}
+.online-game-line-spacing {
+  line-height: 3rem;
+}
+.play-now i {
+  font-size: 34px;
+}
+.play-now {
+  color: var(--primary-color);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  z-index: 10;
+  transform: translate(-50%, -50%);
+  visibility: hidden;
+}
+.card-desc {
+  font-weight: 600;
+}
+.video-cards {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+.video-card {
+  justify-self: center;
+  align-self: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: 10px;
+  cursor: pointer;
+}
+.image-container {
+  width: 230px;
+  height: 269px;
+  position: relative;
+}
+.image-container img {
+  width: 100%;
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  z-index: 1;
+  background-color: rgba(0, 0, 0, 0.6);
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+.image-container:hover {
+  border: 2px solid var(--primary-color);
+  border-radius: 12px;
+}
+.image-container:hover .overlay {
+  border: 0px solid var(--primary-color);
+  opacity: 1;
+}
+.image-container:hover .play-now {
+  visibility: visible;
+  transition: 3s ease;
+}
+
+/* =============play-instantly============= */
+.play-instantly {
+  padding-top: 40px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 4%;
+}
+.play-instantly-description {
+  /* align-self: flex-end; */
+  text-align: end;
+  padding-right: 60px;
+  width: 48%;
+}
+.play-instantly-image {
+  flex-grow: 1;
+}
+.main-image{
+  /* width: ; */
+}
+/* =============Responsive============= */
 @media screen and (max-width: 576px) {
   .container {
     width: 100%;
-    padding: 0 4%;
   }
   .navbar,
-  .nav-link {
+  .nav-link,
+  .gamer-section {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -177,11 +303,11 @@ img {
     gap: 10px;
   }
   .navbar {
-    padding: 15px 0 15px;
+    padding: 30px 0 30px;
   }
-  .banner{
+  .banner {
     flex-direction: column-reverse;
-    gap:40px;
+    gap: 40px;
     padding: 20px 4%;
   }
   .banner-description {
@@ -189,7 +315,26 @@ img {
     /* padding-bottom: 20px; */
   }
   .banner-description,
-  .banner-img {
+  .banner-img,
+  .section-img,
+  .section-description {
     width: 100%;
+  }
+  .section-description {
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+  }
+  .video-cards {
+    grid-template-columns: repeat(1, 1fr);
+    gap: 30px;
+  }
+}
+
+@media screen and (min-width: 576px) and (max-width: 768px) {
+  .video-cards {
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 2px;
+    row-gap: 30px;
   }
 }
