complete instant play section

--- a/style.css
+++ b/style.css
@@ -268,8 +268,8 @@ img {
   transition: 3s ease;
 }
 
-/* =============play-instantly============= */
-.play-instantly {
+/* =============play-instantly1============= */
+.play-instantly1 {
   padding-top: 40px;
   display: flex;
   justify-content: space-between;
@@ -277,16 +277,89 @@ img {
   gap: 4%;
 }
 .play-instantly-description {
-  /* align-self: flex-end; */
   text-align: end;
   padding-right: 60px;
   width: 48%;
 }
 .play-instantly-image {
   flex-grow: 1;
+  display: flex;
+  justify-content: end;
+  position: relative;
 }
-.main-image{
-  /* width: ; */
+.main-image {
+  width: 400px;
+  height: 450px;
+}
+.positon-image {
+  position: absolute;
+  left: -20px;
+  bottom: -30px;
+  z-index: 1;
+  display: inline-block;
+  width: 200px;
+  height: 250px;
+}
+.position-image img {
+  border: 1px solid var(--primary-color);
+  border-radius: 8px;
+}
+/* =============play-instantly2============= */
+.play-instantly2 {
+  padding-top: 40px;
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  align-items: center;
+}
+.play-instantly-description2 {
+  text-align: start;
+  padding-left: 80px;
+  width: 48%;
+}
+.play-instantly-image2 {
+  flex-grow: 1;
+  display: flex;
+  justify-content: start;
+  position: relative;
+}
+.main_img2 {
+  width: 400px;
+  height: 450px;
+}
+.position_img2 {
+  position: absolute;
+  right: 10px;
+  bottom: -8px;
+  z-index: 1;
+  display: inline-block;
+  width: 200px;
+  height: 250px;
+}
+.position_img2 img {
+  border: 1px solid var(--primary-color);
+  border-radius: 8px;
+}
+/* =============button-link-section============= */
+.button-link-section {
+  padding-top: 40px;
+  /* display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10px; */
+  display: grid;
+  grid-template-columns: repeat(5,1fr);
+}
+.button-name{
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   padding: 4px 20px;
+}
+.game-img{
+  width: 40px;
+  height: 40px;
 }
 /* =============Responsive============= */
 @media screen and (max-width: 576px) {
@@ -295,7 +368,9 @@ img {
   }
   .navbar,
   .nav-link,
-  .gamer-section {
+  .gamer-section,
+  .play-instantly1,
+  .play-instantly2 {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -314,10 +389,16 @@ img {
     align-items: center;
     /* padding-bottom: 20px; */
   }
+  .video-cards {
+    grid-template-columns: repeat(1, 1fr);
+    gap: 30px;
+  }
   .banner-description,
   .banner-img,
   .section-img,
-  .section-description {
+  .section-description,
+  .play-instantly-description,
+  .play-instantly-description2 {
     width: 100%;
   }
   .section-description {
@@ -325,9 +406,40 @@ img {
     justify-content: center;
     align-items: center;
   }
-  .video-cards {
-    grid-template-columns: repeat(1, 1fr);
-    gap: 30px;
+  .main-image {
+    width: 250px;
+    height: 300px;
+  }
+  .position-image {
+    width: 130px;
+    height: 180px;
+    position: absolute;
+    bottom: -30px;
+    left: -50px;
+  }
+  .play-instantly-image {
+    padding: 0 auto;
+    position: relative;
+  }
+  .play-instantly-description,
+  .play-instantly-description2 {
+    text-align: center;
+    padding: 0;
+  }
+  .main_img2 {
+    width: 250px;
+    height: 300px;
+  }
+  .position_img2 {
+    width: 130px;
+    height: 180px;
+    position: absolute;
+    bottom: -10px;
+    right: -60px;
+  }
+  .play-instantly-image2 {
+    padding: 0 auto;
+    position: relative;
   }
 }
 
@@ -336,5 +448,35 @@ img {
     grid-template-columns: repeat(2, 1fr);
     column-gap: 2px;
     row-gap: 30px;
+  }
+  .main-image {
+    width: 300px;
+    height: 350px;
+  }
+  .position-image {
+    width: 130px;
+    height: 180px;
+    position: absolute;
+    bottom: -30px;
+    left: -50px;
+  }
+  .play-instantly-image {
+    padding: 0 auto;
+    position: relative;
+  }
+  .main_img2 {
+    width: 300px;
+    height: 350px;
+  }
+  .position_img2 {
+    width: 130px;
+    height: 180px;
+    position: absolute;
+    bottom: -10px;
+    right: -60px;
+  }
+  .play-instantly-image2 {
+    padding: 0 auto;
+    position: relative;
   }
 }
