--- a/style.css
+++ b/style.css
@@ -141,7 +141,10 @@ img {
   margin-bottom: 10px;
 }
 .icon-text {
+  display: flex;
+  align-items: center;
   vertical-align: middle;
+  gap: 5px;
 }
 .bxs {
   color: var(--primary-color);
@@ -258,11 +261,11 @@ img {
   border: 2px solid var(--primary-color);
   border-radius: 12px;
 }
-.image-container .overlay1{
+.image-container .overlay1 {
   border: 0px solid var(--primary-color);
   opacity: 1;
 }
-.image-container .play-now1{
+.image-container .play-now1 {
   visibility: visible;
   transition: 3s ease;
 }
@@ -298,12 +301,11 @@ img {
   width: 400px;
   height: 450px;
 }
-.positon-image {
+.position-image {
   position: absolute;
   left: -20px;
   bottom: -30px;
   z-index: 1;
-  display: inline-block;
   width: 200px;
   height: 250px;
 }
@@ -356,10 +358,10 @@ img {
   background-color: var(--primary-color);
 }
 .carrer-description {
-  width: 88%;
+  width: 50%;
 }
 .carrer-image {
-  width: 10%;
+  width: 48%;
 }
 .text-white {
   color: #fff;
@@ -369,6 +371,7 @@ img {
   justify-content: space-between;
   align-items: center;
   gap: 20px;
+  line-height: 2rem;
 }
 .right {
   text-align: end;
@@ -509,6 +512,12 @@ img {
   .play-instantly-description2 {
     width: 100%;
   }
+  .section-description,
+  .play-instantly1,
+  .play-instantly2,
+  .footer-section {
+    padding: 20px;
+  }
   .section-description {
     text-align: center;
     justify-content: center;
@@ -562,9 +571,21 @@ img {
     margin: 0 4px;
     text-align: center;
   }
+  .carrer {
+    padding: 20px 0;
+  }
+  .carrer-description {
+    width: 90%;
+  }
+  .carrer-image {
+    width: 90%;
+  }
 }
 
 @media screen and (min-width: 576px) and (max-width: 768px) {
+  .gamer-section {
+    padding: 20px 10%;
+  }
   .video-cards {
     grid-template-columns: repeat(2, 1fr);
     column-gap: 2px;
@@ -596,11 +617,14 @@ img {
     bottom: -10px;
     right: -60px;
   }
+  .button-link-section {
+    padding: 10px 10px;
+  }
   .play-instantly-image2 {
     padding: 0 auto;
     position: relative;
   }
   .carrer {
-    padding: 20px 5%;
+    padding: 20px;
   }
 }
